--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <style>
 
-/*   .circle {
+   .circle {
     background-color: yellow;
     height: 100px;
     width: 100px;
     border-radius: 50%;
     margin: 100px auto;
     
-  } */
+  } 
 
 </style>
 
+  <audio src="combined1.mp3" autoplay="combined1.mp3" loop="combined1.mp3">
+  </audio>
 
-<!-- <div class="circle">
-</div> -->
+<div class="circle">
+</div> 
 <img class="laputa" src="laputa.jpg" alt="laputa">
 
 <script>
